overall style manage

--- a/about.html
+++ b/about.html
@@ -72,84 +72,61 @@
     </header>
     <!-- end header section -->
   </div>
-
   <!-- ABOUT PAGE -->
   <section class="about-hero">
     <div class="container">
       <h1>About Mattern Roots Preschool</h1>
+      <p>A calm, caring space where children feel safe to grow.</p>
+    </div>
+  </section>
+
+  <section class="about-story">
+    <div class="container">
+      <div class="about-story-wrap">
+        <div class="about-image">
+          <img src="images/class.png" alt="Preschool classroom">
+        </div>
+
+        <div class="about-text">
+          <p>
+            <span class="about-head-text">Mattern Roots Preschool</span> was created with one simple intention -
+            to offer young children a peaceful, nurturing environment where
+            they feel secure, respected, and understood.
+          </p>
+
+          <p>
+            Located in Kolhapur,<span class="about-head-text"> our preschool focuses on early learning through
+              play, routine, and gentle guidance.</span> We believe children learn best
+            when they are emotionally safe and personally cared for.
+          </p>
+
+          <p>
+            With small class sizes and attentive teachers,<span class="about-head-text"> we take the time
+              to understand each child and support their natural pace of growth.</span>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- <section class="about-trust">
+    <div class="container">
       <p>
-        A nurturing space where children grow with care, confidence, and curiosity.
+        Parents trust Mattern Roots Preschool for its calm atmosphere,
+        thoughtful routines, and teachers who treat every child with
+        patience, warmth, and respect.
       </p>
     </div>
-  </section>
+  </section> -->
 
-  <section class="about-main">
-    <div class="about-overlay"></div>
-    <div class="container about-content-wrapper">
-
-      <!-- <div class="about-intro">
-        <p>
-          At <strong>Mattern Roots Preschool</strong>, we focus on early childhood development
-          through love, play, and purposeful learning - helping children grow confidently
-          in their most important years.
-        </p>
-      </div> -->
-
-
-      <!-- WHO WE ARE -->
-      <div class="about-block about-story">
-        <h2>Our Story</h2>
-        <p>
-          Mattern Roots Preschool was created with one simple belief - early childhood
-          should be joyful, safe, and meaningful.
-        </p>
-        <p>
-          Located in Kolhapur, we provide a nurturing space where children are encouraged
-          to explore, express, and grow at their own pace, supported by caring teachers
-          and thoughtful routines.
-        </p>
-      </div>
-
-
-      <!-- PHILOSOPHY -->
-      <div class="about-block philosophy">
-        <h2>How We Teach</h2>
-
-        <div class="philosophy-grid">
-          <div class="pill">Play-Based Learning</div>
-          <div class="pill">Emotional Development</div>
-          <div class="pill">Small Group Activities</div>
-          <div class="pill">Confidence & Independence</div>
-        </div>
-      </div>
-
-
-      <!-- WHY TRUST US -->
-      <div class="about-block highlight">
-        <h2>Why Parents Choose Us</h2>
-
-        <div class="trust-grid">
-          <div class="trust-item">Qualified & Caring Teachers</div>
-          <div class="trust-item">Limited Students per Class</div>
-          <div class="trust-item">Safe & Hygienic Environment</div>
-          <div class="trust-item">Personal Attention for Every Child</div>
-        </div>
-      </div>
-
-
-      <!-- CTA -->
-      <div class="about-cta">
-        <h3>
-          <h3>Admissions are open. Give your child the right start.</h3>
-        </h3>
-        <div class="cta-buttons">
-          <a href="tel:+919309459772" class="cta-primary">Call Now</a>
-          <a href="contact.html" class="cta-secondary">Contact Us</a>
-        </div>
-      </div>
-
+  <!-- <section class="about-cta-minimal">
+    <div class="container">
+      <p>Admissions are open.</p>
+      <a href="contact.html">Visit the preschool or speak with us</a>
     </div>
-  </section>
+  </section> -->
+
+
 
   <!-- info section -->
   <section class="info_section layout_padding">
@@ -185,15 +162,18 @@
           </div>
         </div>
 
-        <!-- Our Approach -->
+        <!-- Quick Links -->
         <div class="col-md-3">
-          <div class="info_insta">
-            <h5>Our Approach</h5>
-            <p>
-              We believe in a balanced approach to early education that combines
-              structured learning with creative play, helping children develop
-              socially, emotionally, and academically.
-            </p>
+          <div class="pl-0 pl-lg-5 pl-md-4 footer-links">
+
+            <h5>Quick Links</h5>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="program.html">Programs</a></li>
+              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+            </ul>
           </div>
         </div>
 
