--- a/index.html
+++ b/index.html
@@ -703,7 +703,8 @@
 
         <!-- Quick Links -->
         <div class="col-md-3">
-          <div class="footer-links">
+          <div class="pl-0 pl-lg-5 pl-md-4 footer-links">
+
             <h5>Quick Links</h5>
             <ul>
               <li><a href="index.html">Home</a></li>
