all pages completed basics

--- a/about.html
+++ b/about.html
@@ -62,6 +62,9 @@
                   <a class="nav-link" href="program.html"> Programs </a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="gallery.html"> Gallery </a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="contact.html"> Contact us</a>
                 </li>
               </ul>
