--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
   <!-- contact section -->
 
   <!-- CONTACT PAGE -->
-  <section class="contact-hero">
+  <section class="about-hero">
     <div class="container">
       <h1>Get in Touch</h1>
       <p>
@@ -217,7 +217,7 @@
     </p>
     <p class="text-center text-sm">
       Managed by
-      <a href="https://nexspire.vercel.app/" target="_blank" rel="noopener noreferrer">
+      <a href="https://nexspiretechnologies.in" target="_blank" rel="noopener noreferrer">
         Nexspire Technologies
       </a>
     </p>
