--- a/gallery.html
+++ b/gallery.html
@@ -90,23 +90,28 @@
       <div class="gallery-section">
         <h2>Classroom Environment</h2>
 
-        <div class="masonry">
-          <img src="images/class.png">
-          <img src="images/class.png">
-          <img src="images/class.png">
-          <img src="images/class.png">
-          <img src="images/class.png">
+        <div class="grid-gallery">
+          <img src="images/class_4.png">
+          <img src="images/classroom_2.png">
+          <img src="images/class_3.png">
         </div>
+
       </div>
 
       <div class="gallery-section">
         <h2>Learning Through Play</h2>
 
-        <div class="masonry">
-          <img src="images/class.png">
-          <img src="images/class.png">
-          <img src="images/class.png">
-          <img src="images/class.png">
+        <div class="grid-gallery">
+          <img src="images/kids_1.png">
+          <img src="images/kids.png">
+        </div>
+      </div>
+
+      <div class="gallery-section">
+        <h2>Care, Comfort & Safety</h2>
+
+        <div class="grid-gallery">
+          <img src="images/care.png">
         </div>
       </div>
 
@@ -187,7 +192,7 @@
     </p>
     <p class="text-center text-sm">
       Managed by
-      <a href="https://nexspire.vercel.app/" target="_blank" rel="noopener noreferrer">
+      <a href="https://nexspiretechnologies.in" target="_blank" rel="noopener noreferrer">
         Nexspire Technologies
       </a>
     </p>
