--- a/program.html
+++ b/program.html
@@ -247,7 +247,7 @@
     </p>
     <p class="text-center text-sm">
       Managed by
-      <a href="https://nexspire.vercel.app/" target="_blank" rel="noopener noreferrer">
+      <a href="https://nexspiretechnologies.in" target="_blank" rel="noopener noreferrer">
         Nexspire Technologies
       </a>
     </p>
