--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
     <div class="container">
       <div class="about-story-wrap">
         <div class="about-image">
-          <img src="images/class.png" alt="Preschool classroom">
+          <img src="images/building.png" alt="about us">
         </div>
 
         <div class="about-text">
@@ -204,7 +204,7 @@
     </p>
     <p class="text-center text-sm">
       Managed by
-      <a href="https://nexspire.vercel.app/" target="_blank" rel="noopener noreferrer">
+      <a href="https://nexspiretechnologies.in" target="_blank" rel="noopener noreferrer">
         Nexspire Technologies
       </a>
     </p>
