images converted to webp

--- a/gallery.html
+++ b/gallery.html
@@ -91,9 +91,9 @@
         <h2>Classroom Environment</h2>
 
         <div class="grid-gallery">
-          <img src="images/class_4.png">
-          <img src="images/classroom_2.png">
-          <img src="images/class_3.png">
+          <img src="images/class_4.webp">
+          <img src="images/classroom_2.webp">
+          <img src="images/class_3.webp">
         </div>
 
       </div>
@@ -102,8 +102,8 @@
         <h2>Learning Through Play</h2>
 
         <div class="grid-gallery">
-          <img src="images/kids_1.png">
-          <img src="images/kids.png">
+          <img src="images/kids_1.webp">
+          <img src="images/kids.webp">
         </div>
       </div>
 
@@ -111,10 +111,9 @@
         <h2>Care, Comfort & Safety</h2>
 
         <div class="grid-gallery">
-          <img src="images/care.png">
+          <img src="images/care.webp">
         </div>
       </div>
-
     </section>
 
   </section>
