--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
     <div class="container">
       <div class="about-story-wrap">
         <div class="about-image">
-          <img src="images/building.png" alt="about us">
+          <img src="images/building.webp" alt="about us">
         </div>
 
         <div class="about-text">
