--- a/program.html
+++ b/program.html
@@ -88,7 +88,7 @@
 
         <!-- Playgroup -->
         <div class="program-card">
-          <img src="images/pg.jpg" alt="Playgroup Program">
+          <img src="images/pg.webp" alt="Playgroup Program">
           <div class="program-content">
             <h3>Playgroup</h3>
             <span class="age">(2 - 3 Years)</span>
@@ -114,7 +114,7 @@
 
         <!-- Nursery -->
         <div class="program-card">
-          <img src="images/nursery.jpg" alt="Nursery Program">
+          <img src="images/nur.webp" alt="Nursery Program">
           <div class="program-content">
             <h3>Nursery</h3>
             <span class="age">(3 - 4 Years)</span>
@@ -140,7 +140,7 @@
 
         <!-- Kindergarten Prep -->
         <div class="program-card">
-          <img src="images/kinder.png" alt="Kindergarten Preparation">
+          <img src="images/kinder.webp" alt="Kindergarten Preparation">
           <div class="program-content">
             <h3>Kindergarten Preparation</h3>
             <span class="age">(4 - 5 Years)</span>
