--- a/program.html
+++ b/program.html
@@ -8,15 +8,11 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="description"
+    content="Explore playgroup, nursery, and kindergarten preparation programs at Mattern Roots Preschool in Kolhapur. Age-appropriate learning focused on care, creativity, and early development." />
+  <meta name="author" content="Mattern Roots Preschool" />
 
-  <title>Mattern Roots Preschool</title>
-
-  <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+  <title>Preschool Programs in Kolhapur | Playgroup & Nursery | Mattern Roots</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -38,7 +34,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/mpr_.png" alt="" />
+            <img src="images/mpr_.png" alt="Mattern Roots Preschool logo" />
             <span>
               Mattern Roots Preschool
             </span>
@@ -88,7 +84,7 @@
 
         <!-- Playgroup -->
         <div class="program-card">
-          <img src="images/pg.webp" alt="Playgroup Program">
+          <img src="images/pg.webp" alt="Playgroup program at Mattern Roots Preschool in Kolhapur">
           <div class="program-content">
             <h3>Playgroup</h3>
             <span class="age">(2 - 3 Years)</span>
@@ -106,8 +102,6 @@
               early motor development.<br>
 
               Children learn to interact, share, and build confidence at their own pace.
-            </p>
-
             </p>
           </div>
         </div>
@@ -132,8 +126,6 @@
               Emphasis is placed on language development, creativity, and social interaction.<br>
 
               This stage helps build independence, curiosity, and self-confidence.
-            </p>
-
             </p>
           </div>
         </div>
@@ -184,7 +176,7 @@
           <div class="info_logo">
             <div>
               <a href="">
-                <img src="images/mpr_.png" alt="Mattern Roots Preschool" class="footer-logo" />
+                <img src="images/mpr_.png" alt="Mattern Roots Preschool logo" class="footer-logo" />
 
               </a>
             </div>
@@ -255,45 +247,6 @@
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
-
-  <script>
-    // This example adds a marker to indicate the position of Bondi Beach in Sydney,
-    // Australia.
-    function initMap() {
-      var map = new google.maps.Map(document.getElementById("map"), {
-        zoom: 11,
-        center: {
-          lat: 40.645037,
-          lng: -73.880224
-        }
-      });
-
-      var image = "images/maps-and-flags.png";
-      var beachMarker = new google.maps.Marker({
-        position: {
-          lat: 40.645037,
-          lng: -73.880224
-        },
-        map: map,
-        icon: image
-      });
-    }
-  </script>
-  <!-- google map js -->
-
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap">
-  </script>
-  <!-- end google map js -->
-
-  <script>
-    function openNav() {
-      document.getElementById("myNav").style.width = "100%";
-    }
-
-    function closeNav() {
-      document.getElementById("myNav").style.width = "0%";
-    }
-  </script>
 </body>
 
 </html>
