--- a/about.html
+++ b/about.html
@@ -5,18 +5,16 @@
   <!-- Basic -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="description"
+    content="Learn about Mattern Roots Preschool in Kolhapur, a calm and nurturing playgroup and nursery school focused on early learning, safety, and individual child care." />
+  <meta name="author" content="Mattern Roots Preschool" />
 
-  <title>Mattern Roots Preschool</title>
-
-  <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+  <title>About Mattern Roots Preschool in Kolhapur | Our Story</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -29,6 +27,7 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+  <link rel="canonical" href="https://mattern-roots-preschool.vercel.app//about.html">
 </head>
 
 <body class="sub_page">
@@ -38,7 +37,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/mpr_.png" alt="" />
+            <img src="images/mpr_.png" alt="Mattern Roots Preschool logo" />
             <span>
               Mattern Roots Preschool
             </span>
@@ -87,7 +86,7 @@
     <div class="container">
       <div class="about-story-wrap">
         <div class="about-image">
-          <img src="images/building.webp" alt="about us">
+          <img src="images/building.webp" alt="Mattern Roots Preschool building in Kolhapur">
         </div>
 
         <div class="about-text">
@@ -140,7 +139,7 @@
           <div class="info_logo">
             <div>
               <a href="">
-                <img src="images/mpr_.png" alt="Mattern Roots Preschool" class="footer-logo" />
+                <img src="images/mpr_.png" alt="Mattern Roots Preschool logo" class="footer-logo" />
 
               </a>
             </div>
@@ -212,45 +211,6 @@
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
-
-  <script>
-    // This example adds a marker to indicate the position of Bondi Beach in Sydney,
-    // Australia.
-    function initMap() {
-      var map = new google.maps.Map(document.getElementById("map"), {
-        zoom: 11,
-        center: {
-          lat: 40.645037,
-          lng: -73.880224
-        }
-      });
-
-      var image = "images/maps-and-flags.png";
-      var beachMarker = new google.maps.Marker({
-        position: {
-          lat: 40.645037,
-          lng: -73.880224
-        },
-        map: map,
-        icon: image
-      });
-    }
-  </script>
-  <!-- google map js -->
-
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap">
-  </script>
-  <!-- end google map js -->
-
-  <script>
-    function openNav() {
-      document.getElementById("myNav").style.width = "100%";
-    }
-
-    function closeNav() {
-      document.getElementById("myNav").style.width = "0%";
-    }
-  </script>
 </body>
 
 </html>
