--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,8 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="description" content="Contact and address details of Mattern Roots Preschool in Kolhapur." />
+  <meta name="author" content="Mattern Roots Preschool" />
 
   <title>Mattern Roots Preschool</title>
 
@@ -38,7 +37,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/mpr_.png" alt="" />
+            <img src="images/mpr_.png" alt="Mattern Roots Preschool logo" />
             <span>
               Mattern Roots Preschool
             </span>
@@ -153,7 +152,7 @@
           <div class="info_logo">
             <div>
               <a href="">
-                <img src="images/mpr_.png" alt="Mattern Roots Preschool" class="footer-logo" />
+                <img src="images/mpr_.png" alt="Mattern Roots Preschool Logo" class="footer-logo" />
 
               </a>
             </div>
@@ -225,42 +224,6 @@
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
-
-  <script>
-    function initMap() {
-      const preschoolLocation = {
-        lat: 16.6990,
-        lng: 74.2317
-      };
-
-      const map = new google.maps.Map(document.getElementById("map"), {
-        zoom: 16,
-        center: preschoolLocation,
-      });
-
-      new google.maps.Marker({
-        position: preschoolLocation,
-        map: map,
-        title: "Mattern Roots Preschool",
-      });
-    }
-  </script>
-
-  <!-- google map js -->
-
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap">
-  </script>
-  <!-- end google map js -->
-
-  <script>
-    function openNav() {
-      document.getElementById("myNav").style.width = "100%";
-    }
-
-    function closeNav() {
-      document.getElementById("myNav").style.width = "0%";
-    }
-  </script>
 </body>
 
 </html>
