--- a/gallery.html
+++ b/gallery.html
@@ -8,22 +8,15 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="description"
+    content="Explore pictures of classroom environment, learning through play, and care at Mattern Roots Preschool in Kolhapur." />
+  <meta name="author" content="Mattern Roots Preschool" />
 
-  <title>Mattern Roots Preschool</title>
+  <title>Preschool Gallery in Kolhapur | Mattern Roots Preschool</title>
 
-  <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-
-  <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Poppins:400,700|Roboto:400,700&display=swap"
-    rel="stylesheet" />
 
   <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet" />
@@ -38,7 +31,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/mpr_.png" alt="" />
+            <img src="images/mpr_.png" alt="Mattern Roots Preschool logo" />
             <span>
               Mattern Roots Preschool
             </span>
@@ -76,7 +69,6 @@
     <!-- end header section -->
   </div>
 
-
   <!-- ABOUT PAGE -->
   <section class="about-hero">
     <div class="container">
@@ -86,36 +78,33 @@
   </section>
 
   <section class="gallery-page">
-    <section class="gallery-page">
-      <div class="gallery-section">
-        <h2>Classroom Environment</h2>
+    <div class="gallery-section">
+      <h2>Classroom Environment</h2>
 
-        <div class="grid-gallery">
-          <img src="images/class_4.webp">
-          <img src="images/classroom_2.webp">
-          <img src="images/class_3.webp">
-        </div>
-
+      <div class="grid-gallery">
+        <img src="images/class_4.webp" alt="Classroom environment at Mattern Roots Preschool in Kolhapur">
+        <img src="images/classroom_2.webp" alt="Preschool classroom setup in Kolhapur">
+        <img src="images/class_3.webp" alt="Learning space at Mattern Roots Preschool">
       </div>
 
-      <div class="gallery-section">
-        <h2>Learning Through Play</h2>
+    </div>
 
-        <div class="grid-gallery">
-          <img src="images/kids_1.webp">
-          <img src="images/kids.webp">
-        </div>
+    <div class="gallery-section">
+      <h2>Learning Through Play</h2>
+
+      <div class="grid-gallery">
+        <img src="images/kids_1.webp" alt="Children learning through play at Mattern Roots Preschool in Kolhapur">
+        <img src="images/kids.webp" alt="Children playing at Mattern Roots Preschool">
       </div>
+    </div>
 
-      <div class="gallery-section">
-        <h2>Care, Comfort & Safety</h2>
+    <div class="gallery-section">
+      <h2>Care, Comfort & Safety</h2>
 
-        <div class="grid-gallery">
-          <img src="images/care.webp">
-        </div>
+      <div class="grid-gallery">
+        <img src="images/care.webp" alt="Caring environment at Mattern Roots Preschool in Kolhapur">
       </div>
-    </section>
-
+    </div>
   </section>
 
   <!-- Footer info section -->
@@ -127,8 +116,7 @@
           <div class="info_logo">
             <div>
               <a href="">
-                <img src="images/mpr_.png" alt="Mattern Roots Preschool" class="footer-logo" />
-
+                <img src="images/mpr_.png" alt="Mattern Roots Preschool logo" class="footer-logo" />
               </a>
             </div>
             <p>
@@ -199,45 +187,6 @@
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
-
-  <script>
-    // This example adds a marker to indicate the position of Bondi Beach in Sydney,
-    // Australia.
-    function initMap() {
-      var map = new google.maps.Map(document.getElementById("map"), {
-        zoom: 11,
-        center: {
-          lat: 40.645037,
-          lng: -73.880224
-        }
-      });
-
-      var image = "images/maps-and-flags.png";
-      var beachMarker = new google.maps.Marker({
-        position: {
-          lat: 40.645037,
-          lng: -73.880224
-        },
-        map: map,
-        icon: image
-      });
-    }
-  </script>
-  <!-- google map js -->
-
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap">
-  </script>
-  <!-- end google map js -->
-
-  <script>
-    function openNav() {
-      document.getElementById("myNav").style.width = "100%";
-    }
-
-    function closeNav() {
-      document.getElementById("myNav").style.width = "0%";
-    }
-  </script>
 </body>
 
 </html>
