--- a/index.html
+++ b/index.html
@@ -5,18 +5,15 @@
   <!-- Basic -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="description" content="Mattern Roots Preschool in Kolhapur offers a safe, caring, and joyful learning environment for playgroup and nursery children with experienced teachers and child-friendly facilities." />
+  <meta name="author" content="Mattern Roots Preschool" />
 
   <title>Mattern Roots Preschool</title>
-
-  <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -31,9 +28,6 @@
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
 
-  <!-- Tailwind CSS -->
-  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-
 </head>
 
 <body>
@@ -43,7 +37,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/mpr_.png" alt="" />
+            <img src="images/mpr_.png" alt="Mattern Roots Preschool logo" />
             <span>
               Mattern Roots Preschool
             </span>
@@ -572,7 +566,7 @@
                   d="m240 164.6875v-20.6875c0-2.121094-.839844-4.160156-2.34375-5.65625l-16-16c-1.496094-1.503906-3.535156-2.34375-5.65625-2.34375h-16c-2.121094 0-4.160156.839844-5.65625 2.34375l-13.65625 13.65625h-28.6875c-4.414062 0-8 3.585938-8 8v40c0 4.414062 3.585938 8 8 8h12.6875l13.65625 13.65625c1.496094 1.503906 3.535156 2.34375 5.65625 2.34375h12.6875l13.65625 13.65625c1.496094 1.503906 3.535156 2.34375 5.65625 2.34375h16c2.121094 0 4.160156-.839844 5.65625-2.34375l16-16c1.503906-1.496094 2.34375-3.535156 2.34375-5.65625v-16c0-2.121094-.839844-4.160156-2.34375-5.65625zm0 32-11.3125 11.3125h-9.375l-13.65625-13.65625c-1.496094-1.503906-3.535156-2.34375-5.65625-2.34375h-12.6875l-13.65625-13.65625c-1.496094-1.503906-3.535156-2.34375-5.65625-2.34375h-8v-24h24c2.121094 0 4.160156-.839844 5.65625-2.34375l13.65625-13.65625h9.375l11.3125 11.3125v20.6875c0 2.121094.839844 4.160156 2.34375 5.65625l13.65625 13.65625zm0 0" />
               </svg>
             </div>
-             <div class="detail-box">
+            <div class="detail-box">
               <h6>Creative Learning</h6>
               <p>
                 Art, music, storytelling, and hands-on activities that encourage imagination,
@@ -591,7 +585,8 @@
     <div class="container-fluid">
       <div class="about-wrapper">
         <div class="about-image">
-          <img src="images/classroom.png" alt="classroom image">
+          <img src="images/classroom.webp" alt="Classroom at Mattern Roots Preschool in Kolhapur">
+
         </div>
 
         <div class="about-content">
@@ -655,20 +650,17 @@
     </div>
   </section>
 
-
   <!-- contact section -->
-
   <section class="cta_strip">
     <div class="container">
       <h3>Admissions Open for Playgroup & Nursery</h3>
       <p>
         Call us to know more or visit the preschool for a personal tour.
       </p>
-      <a href="tel:+91XXXXXXXXXX" class="cta-btn">Call Now</a>
+      <a href="tel:+919309459772" class="cta-btn">Call Now</a>
       <a href="contact.html" class="cta-btn-outline">Email Us</a>
     </div>
   </section>
-
 
   <!-- info section -->
   <section class="info_section layout_padding">
@@ -753,48 +745,10 @@
   <script type="text/javascript" src="js/bootstrap.js"></script>
 
   <script>
-    // This example adds a marker to indicate the position of Bondi Beach in Sydney,
-    // Australia.
-    function initMap() {
-      var map = new google.maps.Map(document.getElementById("map"), {
-        zoom: 11,
-        center: {
-          lat: 40.645037,
-          lng: -73.880224
-        }
-      });
-
-      var image = "images/maps-and-flags.png";
-      var beachMarker = new google.maps.Marker({
-        position: {
-          lat: 40.645037,
-          lng: -73.880224
-        },
-        map: map,
-        icon: image
-      });
-    }
-  </script>
-  <!-- google map js -->
-
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap">
-  </script>
-  <!-- end google map js -->
-
-  <script>
-    function openNav() {
-      document.getElementById("myNav").style.width = "100%";
-    }
-
-    function closeNav() {
-      document.getElementById("myNav").style.width = "0%";
-    }
-  </script>
-  <script>
     document.getElementById('year').textContent = new Date().getFullYear()
   </script>
   <a href="https://wa.me/919309459772" class="whatsapp-float" target="_blank" aria-label="Chat on WhatsApp">
-    <img src="images/wp.svg" alt="WhatsApp">
+    <img src="images/wp.svg" alt="WhatsApp widget">
   </a>
 </body>
 
