--- a/about.html
+++ b/about.html
@@ -86,50 +86,85 @@
     <div class="container">
       <div class="about-story-wrap">
         <div class="about-image">
-          <img src="images/building.webp" alt="Mattern Roots Preschool building in Kolhapur">
+          <img src="images/School_images/building_1.webp" alt="Mattern Roots Preschool building in Kolhapur">
         </div>
 
         <div class="about-text">
           <p>
-            <span class="about-head-text">Mattern Roots Preschool</span> was created with one simple intention -
-            to offer young children a peaceful, nurturing environment where
-            they feel secure, respected, and understood.
+            <span class="about-head-text">Mattern Roots Preschool</span> was founded with a clear purpose -
+            to create a nurturing learning environment where young children feel emotionally secure,
+            respected, and encouraged to grow at their own pace.
           </p>
 
           <p>
-            Located in Kolhapur,<span class="about-head-text"> our preschool focuses on early learning through
-              play, routine, and gentle guidance.</span> We believe children learn best
-            when they are emotionally safe and personally cared for.
+            Located in Kolhapur, our preschool focuses on early childhood learning through play,
+            routine, exploration, and gentle guidance. We believe that strong emotional security
+            forms the foundation for confident learning.
           </p>
 
           <p>
-            With small class sizes and attentive teachers,<span class="about-head-text"> we take the time
-              to understand each child and support their natural pace of growth.</span>
+            With small class sizes and attentive educators, we take the time to understand each child
+            as an individual and support their natural curiosity, confidence, and development.
           </p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- <section class="about-trust">
+  <section class="about-philosophy">
     <div class="container">
+      <h2>Matern Roots Experimental Lab Based Teaching Programme (ELTEP)</h2>
+
       <p>
-        Parents trust Mattern Roots Preschool for its calm atmosphere,
-        thoughtful routines, and teachers who treat every child with
-        patience, warmth, and respect.
+        At Mattern Roots Preschool, learning is guided by our Experimental Lab Based Teaching Programme
+        (ELTEP). This approach introduces children to hands-on learning experiences that encourage
+        observation, exploration, and logical thinking in an age-appropriate manner.
+      </p>
+
+      <p>
+        Through guided activities and simple experiments, children learn by doing rather than memorizing.
+        This method helps develop early logic and reasoning abilities while keeping learning joyful,
+        meaningful, and stress-free.
       </p>
     </div>
-  </section> -->
+  </section>
 
-  <!-- <section class="about-cta-minimal">
+  <section class="about-standards">
     <div class="container">
-      <p>Admissions are open.</p>
-      <a href="contact.html">Visit the preschool or speak with us</a>
+      <h2>Global Standards and Finland Accreditation</h2>
+
+      <p>
+        Our curriculum, pedagogy, teaching methods, and teacher training practices are designed in
+        alignment with the National Education Policy (NEP), focusing on the critical developmental
+        years from birth to six years of age.
+      </p>
+
+      <p>
+        We follow a highly advanced academic framework inspired by global early education standards
+        and are in the process of obtaining accreditation from Finland. This ongoing accreditation
+        reflects our commitment to quality, research-based learning practices.
+      </p>
+
+      <p>
+        Alongside academics, creative and art-based activities are thoughtfully integrated to support
+        emotional expression, social development, and confidence building in young children.
+      </p>
     </div>
-  </section> -->
+  </section>
 
+  <section class="program-cta">
+    <div class="container">
+      <h3>Admissions Are Open Now</h3>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <a href="contact.html" class="cta-btn">Visit the preschool or speak with us</a>
+    </div>
+  </section>
 
-
+  </section>
   <!-- info section -->
   <section class="info_section layout_padding">
     <div class="container">
