--- a/gallery.html
+++ b/gallery.html
@@ -81,10 +81,14 @@
     <div class="gallery-section">
       <h2>Classroom Environment</h2>
 
-      <div class="grid-gallery">
-        <img src="images/class_4.webp" alt="Classroom environment at Mattern Roots Preschool in Kolhapur">
-        <img src="images/classroom_2.webp" alt="Preschool classroom setup in Kolhapur">
-        <img src="images/class_3.webp" alt="Learning space at Mattern Roots Preschool">
+      <div class="gallery-scroll">
+        <div class="gallery-row">
+          <img src="images/School_images/classroom_1.webp"
+            alt="Classroom environment at Mattern Roots Preschool in Kolhapur">
+          <img src="images/School_images/classroom_2.webp" alt="Preschool classroom setup in Kolhapur">
+          <img src="images/School_images/classroom_3.webp" alt="Learning space at Mattern Roots Preschool">
+          <img src="images/School_images/classroom_4.webp" alt="Learning space at Mattern Roots Preschool">
+        </div>
       </div>
 
     </div>
@@ -92,17 +96,45 @@
     <div class="gallery-section">
       <h2>Learning Through Play</h2>
 
-      <div class="grid-gallery">
-        <img src="images/kids_1.webp" alt="Children learning through play at Mattern Roots Preschool in Kolhapur">
-        <img src="images/kids.webp" alt="Children playing at Mattern Roots Preschool">
+      <div class="gallery-scroll">
+        <div class="gallery-row">
+          <img src="images/School_images/activity.webp"
+            alt="Children learning through play at Mattern Roots Preschool in Kolhapur">
+          <img src="images/School_images/activity_1.webp" alt="Children playing at Mattern Roots Preschool">
+          <img src="images/School_images/activity_2.webp" alt="Children playing at Mattern Roots Preschool">
+          <img src="images/School_images/activity_3.webp" alt="Children playing at Mattern Roots Preschool">
+          <img src="images/School_images/activity_4.webp" alt="Children playing at Mattern Roots Preschool">
+          <img src="images/School_images/activity_5.webp" alt="Children playing at Mattern Roots Preschool">
+          <img src="images/School_images/activity_6.webp" alt="Children playing at Mattern Roots Preschool">
+        </div>
       </div>
     </div>
 
     <div class="gallery-section">
-      <h2>Care, Comfort & Safety</h2>
+      <h2>Our Preschool Space</h2>
 
-      <div class="grid-gallery">
-        <img src="images/care.webp" alt="Caring environment at Mattern Roots Preschool in Kolhapur">
+      <div class="gallery-scroll">
+        <div class="gallery-row">
+          <img src="images/School_images/space_1.webp" alt="Caring environment at Mattern Roots Preschool in Kolhapur">
+          <img src="images/School_images/space_2.webp" alt="Caring environment at Mattern Roots Preschool in Kolhapur">
+          <img src="images/School_images/space_5.webp" alt="Caring environment at Mattern Roots Preschool in Kolhapur">
+          <img src="images/School_images/space_4.webp" alt="Caring environment at Mattern Roots Preschool in Kolhapur">
+        </div>
+      </div>
+    </div>
+
+    <div class="gallery-section">
+      <h2>Preschool Outside View</h2>
+
+      <div class="gallery-scroll">
+        <div class="gallery-row">
+          <img src="images/School_images/Building.webp" alt="Outside view of Mattern Roots Preschool in Kolhapur">
+          <img src="images/School_images/building_1.webp" alt="Outside view of Mattern Roots Preschool in Kolhapur">
+          <img src="images/School_images/building_2.webp" alt="Outside view of Mattern Roots Preschool in Kolhapur">
+          <img src="images/School_images/building_3.webp" alt="Outside view of Mattern Roots Preschool in Kolhapur">
+          <img src="images/School_images/building_4.webp" alt="Outside view of Mattern Roots Preschool in Kolhapur">
+          <img src="images/School_images/building_5.webp" alt="Outside view of Mattern Roots Preschool in Kolhapur">
+        </div>
       </div>
     </div>
   </section>
