--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <!-- Basic -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  
+
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  
+
   <!-- Site Metas -->
-  <meta name="description" content="Mattern Roots Preschool in Kolhapur offers a safe, caring, and joyful learning environment for playgroup and nursery children with experienced teachers and child-friendly facilities." />
+  <meta name="description"
+    content="Mattern Roots Preschool in Kolhapur offers a safe, caring, and joyful learning environment for playgroup and nursery children with experienced teachers and child-friendly facilities." />
   <meta name="author" content="Mattern Roots Preschool" />
 
   <title>Mattern Roots Preschool</title>
@@ -248,13 +249,15 @@
               </svg>
             </div>
             <div class="detail-box">
-              <h6>Safety First</h6>
+              <h6>Hygiene & Safety First</h6>
               <p>
-                A secure and well-monitored environment where your child feels protected,
-                comfortable, and cared for throughout the day.
+                We provide a clean, secure, and carefully monitored environment where children feel safe and comfortable
+                every day. <br/>Washrooms are equipped with ultraviolet sanitization, and the entire preschool is under 24x7
+                CCTV surveillance.
               </p>
-
             </div>
+
+
           </div>
         </div>
 
@@ -321,10 +324,12 @@
             <div class="detail-box">
               <h6>Small Class Sizes</h6>
               <p>
-                Limited students per class to ensure personal attention, better interaction,
-                and meaningful learning experiences for every child.
+                With a low 8:1 student-teacher ratio, we ensure every child receives individual attention, guidance, and
+                care. Our Enhanced Personal Attention Programme supports meaningful interaction and focused learning for
+                each child.
               </p>
             </div>
+
           </div>
         </div>
 
@@ -523,8 +528,8 @@
             <div class="detail-box">
               <h6>Happy Learning Environment</h6>
               <p>
-                A joyful, child-friendly atmosphere that supports emotional growth,
-                confidence, and social development.
+                Health and Happiness are our key stones.
+                We believe in transforming every activity to enthuse curiosity and give happiness to the kids.
               </p>
             </div>
           </div>
@@ -547,10 +552,13 @@
             <div class="detail-box">
               <h6>Qualified Teachers</h6>
               <p>
-                Experienced and trained educators who guide children with patience,
-                warmth, and a deep understanding of early childhood education.
+                All our teachers are graduate-qualified and trained to follow globally aligned early learning practices.
+                <br />Each educator goes through a careful screening process to ensure they can support young children
+                with
+                care, clarity, and consistency.
               </p>
             </div>
+
           </div>
         </div>
 
@@ -569,10 +577,11 @@
             <div class="detail-box">
               <h6>Creative Learning</h6>
               <p>
-                Art, music, storytelling, and hands-on activities that encourage imagination,
-                curiosity, and early skill development.
+                Through art, music, storytelling, and hands-on activities, children develop emotional, mental, academic,
+                and social skills in a joyful and engaging learning environment.
               </p>
             </div>
+
           </div>
         </div>
 
@@ -585,7 +594,7 @@
     <div class="container-fluid">
       <div class="about-wrapper">
         <div class="about-image">
-          <img src="images/classroom.webp" alt="Classroom at Mattern Roots Preschool in Kolhapur">
+          <img src="images/School_images/Building.webp" alt="Classroom at Mattern Roots Preschool in Kolhapur">
 
         </div>
 
