--- a/program.html
+++ b/program.html
@@ -81,7 +81,6 @@
   <section class="programs-section">
     <div class="container">
       <div class="programs-grid">
-
         <!-- Playgroup -->
         <div class="program-card">
           <img src="images/pg.webp" alt="Playgroup program at Mattern Roots Preschool in Kolhapur">
@@ -90,18 +89,18 @@
             <span class="age">(2 - 3 Years)</span>
             <br>
             <p>
-              A gentle introduction to school life through play, music, movement, and
-              social interaction in a safe and caring environment.<br><br>
+              Our Playgroup program offers a gentle introduction to school life in a safe, caring, and nurturing
+              environment,
+              where children learn through play, music, movement, and joyful social interaction.<br><br>
 
-              Our Playgroup program provides a warm and nurturing environment where young
-              children begin their learning journey through play.<br>
+              Early language development begins at this stage, with children introduced to alphabets, simple words, and
+              basic
+              sentence formation by connecting learning to their everyday surroundings.<br><br>
 
-              Activities include music, movement, storytelling, and hands-on exploration.<br>
-
-              The program focuses on developing social skills, emotional security, and
-              early motor development.<br>
-
-              Children learn to interact, share, and build confidence at their own pace.
+              Creative workshops such as pottery, lantern making, toy making, and other hands-on activities help build
+              curiosity, confidence, and fine motor skills. The Matern Roots Language Module forms the foundation for
+              all
+              further learning programs.
             </p>
           </div>
         </div>
@@ -114,45 +113,51 @@
             <span class="age">(3 - 4 Years)</span>
             <br>
             <p>
-              Structured learning combined with creative play to develop early literacy,
-              numeracy, communication, and self-confidence.<br><br>
+              Our Nursery program combines structured learning with creative play to support early literacy, numeracy,
+              communication, and growing confidence.<br><br>
 
-              The Nursery program combines structured learning with creative play to support
-              early childhood development.<br>
+              Children explore learning through engaging activities, with a unique Science with Fun module that
+              introduces
+              basic concepts through simple stories and hands-on experiments.<br><br>
 
-              Children are introduced to basic literacy and numeracy through fun, engaging
-              activities.<br>
-
-              Emphasis is placed on language development, creativity, and social interaction.<br>
-
-              This stage helps build independence, curiosity, and self-confidence.
+              The Nursery Math module gently introduces addition, subtraction, and multiplication in a playful and
+              effortless
+              way, while continued focus on language, creativity, and social interaction builds curiosity and
+              independence.
             </p>
           </div>
+
+
         </div>
 
-        <!-- Kindergarten Prep -->
+        <!-- UKG or Junior Kg programme    -->
         <div class="program-card">
-          <img src="images/kinder.webp" alt="Kindergarten Preparation">
+          <img src="images/kinder.webp" alt="UKG or Junior Kg programme at Mattern Roots Preschool">
           <div class="program-content">
-            <h3>Kindergarten Preparation</h3>
+            <h3>UKG or Junior Kg Programme</h3>
             <span class="age">(4 - 5 Years)</span>
             <p>
-              Focused preparation for formal schooling with activity-based learning,
-              problem-solving skills, and emotional readiness.<br><br>
+              Our UKG or junior program supports a smooth transition into formal schooling through
+              activity-based learning and structured guidance.<br><br>
 
-              Our Kindergarten Preparation program is designed to prepare children for a smooth
-              transition into formal schooling.<br>
+              The curriculum is designed around five core modules - Science, Mathematics, Language
+              Development, Environmental and Health Sciences, along with Art and Music.<br><br>
 
-              The curriculum includes early reading, writing, and mathematical concepts through
-              activity-based learning.<br>
+              Children explore math concepts like addition, subtraction, multiplication, geometry, and problem-solving
+              in a
+              hands-on way, while science learning includes simple experiments, observations, and early exposure to
+              technology
+              concepts.<br><br>
 
-              Children develop problem-solving abilities, critical thinking, and emotional readiness.<br>
+              Language development focuses on reading, writing, phonics, grammar, storytelling, public speaking, and
+              introduction to a second language. Environmental learning builds awareness of nature, health, hygiene, and
+              responsible living, while art and music nurture creativity, expression, and cultural appreciation.<br><br>
 
-              The program also encourages independence, responsibility, and teamwork.
+              The program encourages independent thinking, emotional readiness, teamwork, and confidence for primary
+              school.
             </p>
           </div>
         </div>
-
       </div>
     </div>
   </section>
