--- a/program.html
+++ b/program.html
@@ -83,7 +83,7 @@
       <div class="programs-grid">
         <!-- Playgroup -->
         <div class="program-card">
-          <img src="images/pg.webp" alt="Playgroup program at Mattern Roots Preschool in Kolhapur">
+          <img src="images/MR_Playgroup.png" alt="Playgroup program at Mattern Roots Preschool in Kolhapur">
           <div class="program-content">
             <h3>Playgroup</h3>
             <span class="age">(2 - 3 Years)</span>
@@ -107,7 +107,7 @@
 
         <!-- Nursery -->
         <div class="program-card">
-          <img src="images/nur.webp" alt="Nursery Program">
+          <img src="images/nursery_logo.png" alt="Nursery Program">
           <div class="program-content">
             <h3>Nursery</h3>
             <span class="age">(3 - 4 Years)</span>
@@ -132,7 +132,7 @@
 
         <!-- UKG or Junior Kg programme    -->
         <div class="program-card">
-          <img src="images/kinder.webp" alt="UKG or Junior Kg programme at Mattern Roots Preschool">
+          <img src="images/ukg.png" alt="UKG or Junior Kg programme at Mattern Roots Preschool">
           <div class="program-content">
             <h3>UKG or Junior Kg Programme</h3>
             <span class="age">(4 - 5 Years)</span>
