mob screen related changes

--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
               Mattern Roots Preschool
             </span>
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+
+          <button class="navbar-toggler" type="button" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="hamburger"></span>
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -252,7 +254,8 @@
               <h6>Hygiene & Safety First</h6>
               <p>
                 We provide a clean, secure, and carefully monitored environment where children feel safe and comfortable
-                every day. <br/>Washrooms are equipped with ultraviolet sanitization, and the entire preschool is under 24x7
+                every day. <br />Washrooms are equipped with ultraviolet sanitization, and the entire preschool is under
+                24x7
                 CCTV surveillance.
               </p>
             </div>
@@ -594,7 +597,8 @@
     <div class="container-fluid">
       <div class="about-wrapper">
         <div class="about-image">
-          <img src="images/School_images/compressed_building_1.webp" alt="Classroom at Mattern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_building_1.webp"
+            alt="Classroom at Mattern Roots Preschool in Kolhapur">
 
         </div>
 
