--- a/contact.html
+++ b/contact.html
@@ -52,9 +52,10 @@
               Mattern Roots Preschool
             </span>
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+          <button class="navbar-toggler" type="button" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="hamburger"></span>
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
